--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+BuildProcess.md*
 # Editor directories and files
 .idea
 .vscode
@@ -12,3 +12,5 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+/node_modules.zip
+/node_modules
